CSS: Fix vote stats overflow

--- a/css/v2.css
+++ b/css/v2.css
@@ -617,7 +617,7 @@ div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $bo
 
 /***** Vote stats ****/
 
-.votestats           { width: 630px; margin: 0 auto; }
+.votestats           { width: 100%; max-width: 630px; margin: 0 auto; }
 .votegraph           { float: left; margin-right: 20px }
 .votegraph td        { padding: 0 2px }
 .votegraph td.number { text-align: right }
